--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,9 @@
+@charset "utf-8";
+
+/* GOOGLE FONTS */
+@import url("https://fonts.googleapis.com/css2?family=Rethink+Sans:wght@400;500;600;700&display=swap");
+
+/* TAILWIND CSS */
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
