--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,13 @@
 @charset "utf-8";
 
 /* GOOGLE FONTS */
-@import url("https://fonts.googleapis.com/css2?family=Rethink+Sans:wght@400;500;600;700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Raleway:wght@100;200;300;400;500;600;700;800;900&display=swap");
 
 /* TAILWIND CSS */
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+* {
+  font-family: "Raleway", sans-serif;
+}
