--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,7 @@
 @charset "utf-8";
 
 /* GOOGLE FONTS */
-@import url("https://fonts.googleapis.com/css2?family=Raleway:wght@100;200;300;400;500;600;700;800;900&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;500;600;700;800&display=swap');
 
 /* TAILWIND CSS */
 @tailwind base;
@@ -9,5 +9,5 @@
 @tailwind utilities;
 
 * {
-  font-family: "Raleway", sans-serif;
+ font-family: 'Open Sans', sans-serif;
 }
