--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,7 @@
 @charset "utf-8";
 
 /* GOOGLE FONTS */
-@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;500;600;700;800&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;500;600;700;800&display=swap");
 
 /* TAILWIND CSS */
 @tailwind base;
@@ -9,5 +9,9 @@
 @tailwind utilities;
 
 * {
- font-family: 'Open Sans', sans-serif;
+  font-family: "Open Sans", sans-serif;
+}
+
+img {
+  width: 100%;
 }
